--- a/jupyter_notebooks/01 - DataStudy.ipynb
+++ b/jupyter_notebooks/01 - DataStudy.ipynb
@@ -1878,7 +1878,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.12.1",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
